--- a/task_1 (GRIP).ipynb
+++ b/task_1 (GRIP).ipynb
@@ -21,7 +21,7 @@
    "id": "282aa168",
    "metadata": {},
    "source": [
-    "Auther yasmeen sharaan "
+    "## Auther : yasmeen sharaan "
    ]
   },
   {
