--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -152,9 +152,11 @@
    ],
    "source": [
     "# Load the iris dataset\n",
-    "data = datasets.load_iris()\n",
-    "df = pd.DataFrame(data.data, columns = data.feature_names)\n",
-    "df.head() # See the first 5 rows"
+    "data = pd.read_csv('Iris.csv')"
+    "data.head()"
+    "# data = datasets.load_iris()\n",
+    "# df = pd.DataFrame(data.data, columns = data.feature_names)\n",
+    "# df.head() # See the first 5 rows"
    ]
   },
   {
