--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -152,8 +152,8 @@
    ],
    "source": [
     "# Load the iris dataset\n",
-    "data = pd.read_csv('Iris.csv')",
-    "data.head()",
+    "data = pd.read_csv('Iris.csv')\n",
+    "data.head()\n",
     "# data = datasets.load_iris()\n",
     "# df = pd.DataFrame(data.data, columns = data.feature_names)\n",
     "# df.head() # See the first 5 rows"
